# RecJourney

./: README.md  main.py  pyproject.toml  requirements.txt  trainer.py
config/: fresh_comp.yml  ijcai18.yml
config/dataset/: ijcai18.yml
config/datasetset/: fresh_comp.yml
config/model/: auto_int.json  shared_bottom.json
docs/: structure.md
docs/dataset/: KuaiRand-1K.md
losses/: metrics.py  mrl.py
models/: DCN.py  README.md  __init__.py  din.py
models/AFM/: README.md  afm.py  note.ipynb
models/AutoInt/: README.md  auto_int.py  model.py
models/BST/: README.md  bst.py
models/CAN/: README.md  can.py  test.py
models/DCN/: DCN.py
models/DCNV3/: README.md
models/DIEN/: dien.py
models/DIN/: README.md  din.py
models/EDCN/: README.md  edcn.py
models/ESMM/: esmm.py
models/FDN/: fdn.py
models/FM/: fm.py
models/FiBiNet/: README.md  fibinet.py
models/GDCN/: README.md  gdcn.py
models/HC2/: README.md  model.py
models/HiNet/: hinet.py
models/MMOE/: README.md  demo.ipynb  mmoe.py
models/PEPNet/: LHUC.py  README.md  pepnet.py
models/PLE/: ple.py
models/POSO/: poso.py
models/STEC/: README.md  stec.py
models/WideDeep/: README.md  note.ipynb  widedeep.py
models/WuKong/: README.md
models/tensorflow/: README.md  input_layer.py  preprocess_layer.py
models/xDeepFM/: README.md  xdeepfm.py
optim/: adam.ipynb
preprocess/: config.py  data_processor.py  dtypes.py  emb.py  generic_pandas_preprocess.py  operation.py  operations.py  processors.py
rerank/: mmr_rerank.py
scripts/: download.sh
trainer/: trainer.py
(+58 files in other folders)
